--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="art">
-      <img src="https://via.placeholder.com/600x800?text=Rabbi+Zidni+Ilma" alt="Rabbi Zidni Ilma">
+      <img src="ASlkm_gAiJwubH3h-CVB45Q_eujSf08F8k04nydZnJMk25NUquktiZer3ztQTjY.jpghttps://via.placeholder.com/600x800?text=Rabbi+Zidni+Ilma" alt="Rabbi Zidni Ilma">
       <div class="art-content">
         <h2>“My Lord, increase me in knowledge”</h2>
         <p><strong>Size:</strong> A3</p>
