--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <footer>
     <p>Connect with Afreen: 
       <a href="https://instagram.com/bismillaharts" target="_blank">Instagram</a> | 
-      <a href="https://youtube.com/@bismillaharts" target="_blank">YouTube</a>
+      <a href="https://youtube.com/@bismillaharts77" target="_blank">YouTube</a>
     </p>
     <p>&copy; 2025 Bismillah Arts</p>
   </footer>
