--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     </div>
 
     <div class="art">
-      <img ASlkm_gAiJwubH3h-CVB45Q_eujSf08F8k04nydZnJMk25NUquktiZer3ztQTjY.jpg  <div class="art-content">
+       <img src="https://cdn.jsdelivr.net/gh/bismillaharts/assets/calligraphy-CKv9vWIhYSd.jpg" 
+     alt="Arabic Calligraphy by Afreen - Bismillah Arts" 
+     style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);"><div class="art-content">
         <h2>“My Lord, increase me in knowledge”</h2>
         <p><strong>Size:</strong> A3</p>
         <p><strong>Medium:</strong> Golden ink calligraphy on white card</p>
