--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </div>
 
     <div class="art">
-       <img src="https:/bismillaharts/assets/calligraphy-CKv9vWIhYSd.jpg" 
+        <img src="calligraphy1.jpg" alt="Arabic Calligraphy by Afreen" 
+     style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.15);">
      alt="Arabic Calligraphy by Afreen - Bismillah Arts" 
      style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);"><div class="art-content">
         <h2>“My Lord, increase me in knowledge”</h2>
