--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bismillah Arts – Afreen</title>
+  <title>𝕭𝖎𝖘𝖒𝖎𝖑𝖑𝖆𝖍 𝕬𝖗𝖙𝖘 – 𝓐𝓯𝓻𝓮𝓮𝓷
   <style>
     body { font-family: 'Segoe UI', sans-serif; margin: 0; background: #fff; color: #333; }
     header { background: #111; color: #fff; padding: 2rem; text-align: center; }
